--- a/config/storage.yml
+++ b/config/storage.yml
@@ -5,6 +5,12 @@ test:
 local:
   service: Disk
   root: <%= Rails.root.join("storage") %>
+amazon:
+  service: S3
+  access_key_id: <%= ENV['AWS_ACCESS_KEY_ID'] %>
+  secret_access_key: <%= ENV['AWS_SECRET_ACCESS_KEY'] %>
+  region: ap-northeast-1
+  bucket: mitubakuro-bucket
 
 # Use rails credentials:edit to set the AWS secrets (as aws:access_key_id|secret_access_key)
 # amazon:
